--- a/frontend/stylesheets/user-settings.css.scss
+++ b/frontend/stylesheets/user-settings.css.scss
@@ -28,7 +28,7 @@
       color: #d6d4d1;
       margin-left: 13px;
       font-size: 18px;
-      margin-top: 2px;
+      margin-top: -2px;
       font-family: "Fun City";
     }
 
@@ -50,7 +50,7 @@
     .btn-support-legal {
       border: 2px solid #fff;
       margin-right: 32px;
-      margin-top: 9px;
+      margin-top: 7px;
       color: #fff;
       padding: 3px 20px;
       font-weight: 700;
